Add copyright and license information to changed files
Signed-off-by: Lars Geyer-Blaumeiser <lars.blaumeiser@cofinity-x.com>

--- a/docs/release/trg-7/trg-7-06.md
+++ b/docs/release/trg-7/trg-7-06.md
@@ -54,3 +54,11 @@ Example:
 In order to align with the overall style guide, it's recommended to use the About card provided in the [Shared UI Components](https://eclipse-tractusx.github.io/portal-shared-components) via the respective [NPM library](https://www.npmjs.com/package/@catena-x/portal-shared-components) maintained by the portal product. As reference for the placement of this card in frontend apps: in the portal it has been integrated in an About page which is reachable from the footer.
 
 Regarding usage of this About card, it's recommended to add a json file to your frontend project to be imported for the real content. As some of the content can only be determined in the build pipeline, you could add a json file as reference containing placeholder values. Those placeholder values could then be replaced, by script, just before the build within the build pipeline.
+
+## NOTICE
+
+This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/legalcode).
+
+- SPDX-License-Identifier: CC-BY-4.0
+- SPDX-FileCopyrightText: 2023 Contributors to the Eclipse Foundation
+- Source URL: <https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/docs/release/trg-7/trg-7-06.md>
