--- a/docs/release/trg-7/trg-7-07.md
+++ b/docs/release/trg-7/trg-7-07.md
@@ -225,4 +225,12 @@ Also add this section to the NOTICE file at root level, section "Third-party con
 - Source URL: https://www.flickr.com/photos/sixteenmilesofstring/8256206923/in/set-72157632200936657
  ```
 
-See more: [https://wiki.creativecommons.org/wiki/best_practices_for_attribution](https://wiki.creativecommons.org/wiki/best_practices_for_attribution)
+See more: <https://wiki.creativecommons.org/wiki/best_practices_for_attribution>
+
+## NOTICE
+
+This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/legalcode).
+
+- SPDX-License-Identifier: CC-BY-4.0
+- SPDX-FileCopyrightText: 2023 Contributors to the Eclipse Foundation
+- Source URL: <https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/docs/release/trg-7/trg-7-07.md>
