fix spelling: eco pass kit

--- a/docs-kits/kits/eco-pass-kit/success-stories/battery-pass-viewer-app.mdx
+++ b/docs-kits/kits/eco-pass-kit/success-stories/battery-pass-viewer-app.mdx
@@ -66,7 +66,7 @@ The application is able to visualize general information about the battery and i
 
 ## Cell Information Display
 
-Other Important information is displayed like hazard materials and critial raw materials. This information allows the user to know and act accordingly depending on the information he has available in the Application. Increasing the safety of the worker which is using the application.
+Other Important information is displayed like hazard materials and critical raw materials. This information allows the user to know and act accordingly depending on the information he has available in the Application. Increasing the safety of the worker which is using the application.
 
 [![BatteryPass Viewer App - Cell Chemistry](../resources/success-stories/battery-pass-viewer-app2.png)](../resources/success-stories/battery-pass-viewer-app2.png)
 
