--- a/docs-kits/kits/industry-core-kit/changelog.mdx
+++ b/docs-kits/kits/industry-core-kit/changelog.mdx
@@ -98,7 +98,7 @@ Compatible for **release 24.05**.
     - Updated section about regulatory compliance and security (previously authorization)
     - Updated Unique ID Push Open API specification (to make it consistent with upstream visibility)
     - Unique ID Push notifications now use the standardized message header
-    - Updated documentation and example of subprotocolBody field for submodel descriptors to make it less ambigous
+    - Updated documentation and example of subprotocolBody field for submodel descriptors to make it less ambiguous
   - **Aspect Models:**
     - Enhanced Unique ID Push Notification with two notification types, one for connect to parent and one for connect to child
   - **Policies:**
