--- a/docs-kits/kits/industry-core-kit/parts/future-concepts.mdx
+++ b/docs-kits/kits/industry-core-kit/parts/future-concepts.mdx
@@ -26,13 +26,13 @@ This work is licensed under the CC-BY-4.0 (https://creativecommons.org/licenses/
 
 With the current Industry Core concept, a digital twin must be created for every instantiated part that can be identified, e.g., with a serial number, no matter how small it is. This might result in a huge number of digital twins created in the DTR (more then several hundred million) as parts are produced on a daily basis.
 
-Therefore, we developed a concept to reduce the number of digital twins by building upon the PartType digital twin of such instantiated part. The processing of data is mostly the same as when data is provided conventially, i.e., with a digital twin for every instantiated part.
+Therefore, we developed a concept to reduce the number of digital twins by building upon the PartType digital twin of such instantiated part. The processing of data is mostly the same as when data is provided conventionally, i.e., with a digital twin for every instantiated part.
 
 - The basic idea is to use a PartType digital twin to access data about instances of a part type. It is not necessary to create digital twins for instances.
 - For this PartType:
   - For every aspect that should be provided for instantiated parts (e.g., SerialPart, SingleLevelBomAsBuilt), a submodelDescriptor for this aspect must be added to the part type digital twin. ** As there are no aspect models currently that are used for both, part types and part instances, this does not create any ambiguities.**
   - To get the actual submodel data for a digital twin, an operation must be provided by the data provider that is called via InvokeOperationSync or InvokeOperationAsync (see the AAS standard for more details). At least the ID of the instantiated part (e.g., partInstanceId or batchId) must be specified as an input argument of this operation. **Note that details about the operation including, e..g, input arguments, still need to be standardized to provide a interoperable solution.**
   - The backend data service must handle authorization for instantiated parts based on the BPN of data consumer (similar to asset bundling authorization requirements), if necessary.
-  - The result of this operation must be compliant to the asepct model represented by the submodel descriptor.
+  - The result of this operation must be compliant to the aspect model represented by the submodel descriptor.
 
 With this approach, subsequent processing of the submodel data can then proceed as if a digital twin for the instantiated part was provided.
