Fix link issues with mdx
Signed-off-by: Lars Geyer-Blaumeiser <lars.blaumeiser@cofinity-x.com>

--- a/docs/release/trg-7/trg-7-06.md
+++ b/docs/release/trg-7/trg-7-06.md
@@ -61,4 +61,4 @@ This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses
 
 - SPDX-License-Identifier: CC-BY-4.0
 - SPDX-FileCopyrightText: 2023 Contributors to the Eclipse Foundation
-- Source URL: <https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/docs/release/trg-7/trg-7-06.md>
+- Source URL: [https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/docs/release/trg-7/trg-7-06.md](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/docs/release/trg-7/trg-7-06.md)
