--- a/docs/release/trg-7/trg-7-08.md
+++ b/docs/release/trg-7/trg-7-08.md
@@ -18,4 +18,4 @@ This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses
 
 - SPDX-License-Identifier: CC-BY-4.0
 - SPDX-FileCopyrightText: 2023 Contributors to the Eclipse Foundation
-- Source URL: <https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/docs/release/trg-7/trg-7-08.md>
+- Source URL: [https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/docs/release/trg-7/trg-7-08.md](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/docs/release/trg-7/trg-7-08.md)
