--- a/docs-kits_versioned_docs/version-25.06/kits/traceability-kit/software-development-view/parts/aspect-models.mdx
+++ b/docs-kits_versioned_docs/version-25.06/kits/traceability-kit/software-development-view/parts/aspect-models.mdx
@@ -261,7 +261,7 @@ Attributive measurements confirm that the function is as expected.
 }
 ```
 
-#### Multitple measured results
+#### Multiple measured results
 
 If the `characteristicId` consists of more than one measured results, the `identifier` should be defined between the data provider and data consumer.
 
