Set trgs active
Signed-off-by: Lars Geyer-Blaumeiser <lars.blaumeiser@cofinity-x.com>

--- a/docs/release/trg-7/trg-7-06.md
+++ b/docs/release/trg-7/trg-7-06.md
@@ -4,7 +4,7 @@ title: TRG 7.06 - Legal notice for end user content
 
 | Status | Created     | Post-History                               |
 |--------|-------------|--------------------------------------------|
-| Draft  | 27-Jun-2025 | Remove documentation section finally       |
+| Active | 27-Jun-2025 | Remove documentation section               |
 | Active | 25-Apr-2024 | Updates for CC-BY-4.0 license              |
 | Active | 04-Dec-2023 | Update Shared UI Components / NPM library  |
 | Active | 13-Apr-2023 | New                                        |
