--- a/docs/release/trg-7/trg-7-07.md
+++ b/docs/release/trg-7/trg-7-07.md
@@ -4,7 +4,7 @@ title: TRG 7.07 - Legal notice for non-code (e.g. KITS, documentation, images, s
 
 | Status | Created     | Post-History                  |
 |--------|-------------|-------------------------------|
-| Draft  | 27-06-2025  | Integration of non-code rules |
+| Active | 27-06-2025  | Integration of non-code rules |
 | Active | 25-Apr-2024 | Updates for CC-BY-4.0 license |
 | Active | 18-Jul-2023 | Update: improved description  |
 |        | 13-Apr-2023 | Initial version               |
