--- a/docs-kits/kits/traceability-kit/adoption-view.mdx
+++ b/docs-kits/kits/traceability-kit/adoption-view.mdx
@@ -76,7 +76,7 @@ The following figure gives an overview of how block notifications are exchanged 
 
 ![Block Notifications](assets/block_notifications.svg)
 
-### Special Characteristics
+### Aspect Model Special Characteristics
 Special characteristics are product or process characteristics that may have an impact on safety or regulatory compliance, fit, function, performance or further processing of the product.
 
 Special Characteristics are:
@@ -106,6 +106,18 @@ The target vision aims to enable an end-to-end (E2E) data exchange of special ch
 - **Requesting Special Characteristics:** The customer should have the capability to request special characteristics from the supplier.
 - **Exchanging Specification Data:** The exchange of specification data for special characteristics should be possible at the part type level.
 - **Consuming Measured Data:** The customer should be able to consume the measured data `SpecialCharacteristicMeasurement` provided by the manufacturer.
+
+### Digital Twin qualityTask
+
+The DT (digital twin) qualityTask provides the overarching bracket of a concrete quality issue or in case of abnormalities which needs to be clarified (or wants to be studied), especially if affected parts are not identified and/because the root cause is unknown. 
+It represents the quality issue or quality claim itself as a case or kind of a file. It is NOT a virtual representation of a physical asset (IDTA conformity of DT - asset kind: not applicable).
+All data, no matter what discipline, which is important to reveal the root cause and all vehicles, components or batches which are affected shall be linked to this DT. 
+Having this holistic overview of data and therefore the impact of affected goods/vehicles, the root cause can be found much faster and narrowing down the actual affected goods/vehicles can be done more precisely. The result of analysis can be useful for related issues, like adopting production processes, safer transportation etc. to avoid similar failures.
+ 
+As well the DT qualityTask provides the bridge to the data driven quality use case. The data models can be provided via DT from the OEM and pulled by the Tier1. To inform about a DT qualityTask, the unique ID push mechanism can be used. 
+The specific asset IDs of the DT qualityTask provides the opportunity to list the identification numbers from the affected partners, like the problemID or a case number of an existing application which is used and can be listed if both partners are creating a DT for the specific qualityTask.
+This DT can be used as well as a fleet DT by an OEM. All vehicles in field which are showing the same abnormalities can be linked to it (like a BoM), marked by that as affected and analysed deeper.
+
 
 ### Benefits for OEM, SME and Solution Provider
 #### OEM
