--- a/docs-kits/kits/traceability-kit/adoption-view.mdx
+++ b/docs-kits/kits/traceability-kit/adoption-view.mdx
@@ -107,7 +107,7 @@ The target vision aims to enable an end-to-end (E2E) data exchange of special ch
 - **Exchanging Specification Data:** The exchange of specification data for special characteristics should be possible at the part type level.
 - **Consuming Measured Data:** The customer should be able to consume the measured data `SpecialCharacteristicMeasurement` provided by the manufacturer.
 
-### Digital Twin qualityTask
+### Digital Twin Quality Task
 
 The DT (digital twin) qualityTask provides the overarching bracket of a concrete quality issue or in case of abnormalities which needs to be clarified (or wants to be studied), especially if affected parts are not identified and/because the root cause is unknown. 
 It represents the quality issue or quality claim itself as a case or kind of a file. It is NOT a virtual representation of a physical asset (IDTA conformity of DT - asset kind: not applicable).
