--- a/docs-kits/kits/traceability-kit/adoption-view.mdx
+++ b/docs-kits/kits/traceability-kit/adoption-view.mdx
@@ -23,7 +23,7 @@ Furthermore, it will enable solutions and services for tracking and tracing conf
 
 ### Mission
 
-The Traceability KIT provides the necessary standards, aspect models, digital twin, APIs, logics, and processes to develop traceability apps and provide the necessary data.
+The Traceability KIT provides the necessary standards, aspect models, APIs, logics, and processes to develop traceability apps and provide the necessary data.
 All described specifications in the KIT are based on Catena-X standards like the Industry Core KIT, Data Space Connector KIT and more to ensure interoperability and data sovereignty according to IDSA and Gaia-X principles.
 
 This KIT is closely connected to the Industry Core KIT "Part Instance”, which provides the basis on how to built a data chain based on vehicles, parts and materials - a mandatory prerequisite.
@@ -31,7 +31,9 @@ The Traceability KIT supplements it with further tracking relevant aspects, busi
 
 
 ## Business Value & Benefits
+
 ### Business Value
+
 Through the standardized specifications described in this Traceability KIT – for example the semantic models and APIs – application and service providers are able to develop interoperable Catena-X traceability solutions.
 Since this KIT is built on the Industry Core KIT, investment and implementation costs to integrate traceability services are reduced.
 Application and service providers can enter potential new markets within the PLM & Quality domain.
@@ -48,9 +50,10 @@ Interoperable Catena-X traceability solutions will ensure easy onboarding and da
 
 - Missing standardized industry process for notifying suppliers to narrow down quality issues and sending alerts to customers in case of detected faulty components.
 
-- Data out of multiple disciplines complicates a holistic view to identify the root cause.
+- Data out of multiple disciplines complicates a holistic view to analyse quality issues and identify the root cause.
 
 ### Quality Notifications
+
 Quality notifications are the best way to make customers or suppliers aware of a situation that requires timely action or attention. This could be a situation that has just arisen, or a task triggered by a workflow.
 The Traceability KIT covers two different types of notifications: Quality Investigation and Quality Alert.
 
@@ -101,6 +104,7 @@ Data on the Special Characteristics are collected within the supply chain, but n
 The exchange between supplier and OEM is often done by ad-hoc data exchange without any standardization. Therefore, Catena-X should be used to standardize the data exchange. Since traceability must be ensured for special characteristics, we make use of the Industry Core (Part Instance) with an additional aspect model for the special characteristics: `SpecialCharacteristicMeasurement`. The special characteristics will be directly linked to the digital twin.
 
 #### Processual Approach
+
 The target vision aims to enable an end-to-end (E2E) data exchange of special characteristics via Catena-X in three main steps:
 
 - **Requesting Special Characteristics:** The customer should have the capability to request special characteristics from the supplier.
@@ -110,18 +114,18 @@ The target vision aims to enable an end-to-end (E2E) data exchange of special ch
 ### Digital Twin Quality Task
 
 The DT (digital twin) qualityTask provides the overarching bracket in case of a concrete quality issue or in case of abnormalities which needs to be clarified (or wants to be studied), especially if affected parts are not identified and the root cause is unknown. 
-It represents the quality issue or quality claim itself as a case or kind of a file. It is NOT a virtual representation of a physical asset (IDTA conformity of DT - asset kind: not applicable).
+This kind of DT represents the quality issue or quality claim itself as a case or kind of a file. It is NOT a virtual representation of a physical asset (IDTA conformity of DT - asset kind: not applicable).
 All data, no matter what discipline, which is important to reveal the root cause and all vehicles, components or batches which are affected shall be linked to this DT. 
 Having this holistic overview of data and therefore the impact of affected goods/vehicles, the root cause can be found much faster and narrowing down the actual affected goods/vehicles can be done more precisely. The result of analysis can be useful for related issues, like adopting production processes, safer transportation etc. to avoid similar failures.
  
 Furthermore the DT qualityTask provides the bridge to the data driven quality use case. The data models can be provided via DT from the OEM and pulled by the Tier1. To inform about a DT qualityTask, the unique ID push mechanism can be used. 
-The specific asset IDs of the DT qualityTask provides the opportunity to list the identification numbers from the affected partners, like the problemID or a case number of an existing application which is used and can be listed if both partners are creating a DT for the specific qualityTask.
+The specific asset IDs of the DT qualityTask provides the opportunity to list the identification numbers from the affected partners, like the problemID or a case number of an existing application which is used.
 This DT can be used as well as a fleet DT by an OEM. All vehicles in field which are showing the same abnormalities can be linked to it (like a BoM), marked by that as affected and analysed deeper.
 
 
 ### Benefits for OEM, SME and Solution Provider
 #### OEM
-For OEM and large automotive suppliers, the traceability solution from Catena-X enables companies to identify products affected by a defect faster and more precisely and thus avoiding general and inaccurate recalls.
+For OEMs and large automotive suppliers, the traceability solution from Catena-X enables companies to identify products affected by a defect faster and more precisely and thus avoiding general and inaccurate recalls.
 Through this targeted containment, companies can save both time and money with fewer actions for their customers.
 Moreover, the traceability solution enables businesses to rapidly identify the affected part and the corresponding supplier after receiving an alert from the customer.
 This leads to faster and, therefore, cheaper problem-solving for all parties and less complicated claim management.
