--- a/docs-kits/kits/traceability-kit/changelog.mdx
+++ b/docs-kits/kits/traceability-kit/changelog.mdx
@@ -9,6 +9,11 @@ sidebar_position: 0
 
 All notable changes to this KIT will be documented in this file.
 
+## [6.0.3] - Compatible for **release 25.09**
+
+- add new DT qualityTask in adoption view, architecture view and software operation
+
+
 ## [6.0.2] - 2025-02-07
 
 Compatible for **release 24.12**.
