--- a/docs-kits/kits/traceability-kit/software-development-view/app-provider.mdx
+++ b/docs-kits/kits/traceability-kit/software-development-view/app-provider.mdx
@@ -57,6 +57,7 @@ In order to track the blocking process in the Catena X network, a defined status
 
 A standardized API and corresponding payloads are specified for block notification to enable and ensure the exchange of information that is critical to the blocking process in a standardized way. At this point, the notification API is focused on sending and receiving notifications with a full stack of block information and on updating a previously sent notification by changing the block status. The implemented endpoints shall be able to process the defined request body and respond with the HTTP status codes and - if required - reply with the defined response body. Meanwhile, the Block Notification API shall only be accessible after successful contract negotiation via Connector based on [Dataspace Protocol (DSP)](https://docs.internationaldataspaces.org/dataspace-protocol/), since the API is made available as part of an EDC data asset with usage policy attached. Please refer to the corresponding Block Notification API specification for more details:
 - [Block Notification API (v1.0.0)](https://eclipse-tractusx.github.io/api-hub/eclipse-tractusx.github.io/kit-traceability-block-notifications-openAPI-1.0.0/swagger-ui/)
+- [Block Notification API (v2.0.0)](https://github.com/anneramsauer/eclipse-tractusx.github.io/blob/main/openApi/traceability/kit_traceability-block-notifications-openAPI_2-0-0/swagger-ui) 
 
 
 ## Asset Registration via Connector
