--- a/docs/tutorials/identity-hub.mdx
+++ b/docs/tutorials/identity-hub.mdx
@@ -8,8 +8,9 @@ sidebar_position: 2
 
 In order for you to start developing and join the collaboration for the [tractusx-identityhub](https://github.com/eclipse-tractusx/tractusx-identityhub), you can watch this video tutorial on how to configure in your local computer, and start developing an module:
 
-<video controls style={{width:'100%'}}>
-    <source src="https://github.com/eclipse-tractusx/eclipse-tractusx.github.io.largefiles/raw/f3b41cf8f643fa0ef3cb86ac708b3a4472e03245/identity-hub/video-tutorials/identityhub-installation-and-dev-tutorial.mp4"/>
+<video controls style={{width:'100%'}} preload="metadata">
+    <source src="https://github.com/eclipse-tractusx/eclipse-tractusx.github.io.largefiles/raw/f3b41cf8f643fa0ef3cb86ac708b3a4472e03245/identity-hub/video-tutorials/identityhub-installation-and-dev-tutorial.mp4" type="video/mp4"/>
+    Your browser does not support the video tag. <a href="https://github.com/eclipse-tractusx/eclipse-tractusx.github.io.largefiles/raw/f3b41cf8f643fa0ef3cb86ac708b3a4472e03245/identity-hub/video-tutorials/identityhub-installation-and-dev-tutorial.mp4" target="_blank" rel="noopener noreferrer">Click here to download the video</a>.
 </video>
 
 
