--- a/docs/tutorials/identity-hub.mdx
+++ b/docs/tutorials/identity-hub.mdx
@@ -16,6 +16,33 @@ In order for you to start developing and join the collaboration for the [tractus
 
 Special thanks for our committer [@CDiezRodriguez](https://github.com/CDiezRodriguez?query=Carlos) from LKS Next for the preparation and recording!
 
-## Open Meetings
+## What are our objectives?
+
+We are restarting the development of the Identity Hub (Wallet) in Eclipse Tractus-X.
+
+Our objectives are the following:
+ - Create a well documented identity hub using the [Eclipse Dataspace Components](https://github.com/eclipse-edc) framework.
+ - Implement a multi "-X" dataspace support wallet.
+ - Reduce complexity for applications that are willing to use the wallet.
+ - Make a reality in Eclipse Tractus-X aspect model credentials issuance, based on frameworks like the [dpp-verification](https://github.com/eclipse-tractusx/digital-product-pass/tree/main/dpp-verification) and the future Data Trust & Security KIT!
+ - Demonstrate the issuance, holding, request and management of dataspace membership credentials.
+
+## Our next features
+
+Feel free to look at our latest features [sig-release identity hub](https://github.com/eclipse-tractusx/sig-release/issues?q=state%3Aopen%20label%3Aidentity-hub)
+
+We are planning to develop a frontend, a backend, have an extensive documentation, and much more!
+
+## How can I contribute?
+
+We are looking for developers and brave contributors which want to innovate and collaborate for building this new open source wallet together!
 
 If you are interested on joining the development, feel free to join our [open meetings](https://eclipse-tractusx.github.io/community/open-meetings#Identity%20Hub%20Weekly) and build dataspaces with us!
+
+### Links of interest
+
+[Our Matrix Chat](https://matrix.eecc.de/#/room/%23tractusx-identity-hub:matrix.eclipse.org)
+
+[Our Repository](https://github.com/eclipse-tractusx/tractusx-identityhub)
+
+[Our Planning Board](https://github.com/orgs/eclipse-tractusx/projects/87/views/1)
