chore: fixed typos

--- a/docs-kits/kits/data-trust-and-security-kit/success-stories/dpp-verification-success-story.mdx
+++ b/docs-kits/kits/data-trust-and-security-kit/success-stories/dpp-verification-success-story.mdx
@@ -19,8 +19,8 @@ The focus is on proving a process, artifacts and technologies, based on the exis
 
 The documentation from the Digital Product Pass Verification Add-on is available [here](https://github.com/eclipse-tractusx/digital-product-pass/tree/main/dpp-verification). The concept enables the verification of the Data in the Reference Implementation using a [simple wallet](https://github.com/eclipse-tractusx/digital-product-pass/tree/main/dpp-verification/simple-wallet), a functional wallet that can:
 
-- Sign verifiable credentials with JsonWebSignature2020 proofs
-- Verify verifiable credentials with JsonWebSignature2020 proofs
+- Sign verifiable credentials v2 with JsonWebSignature2020 proofs
+- Verify verifiable credentials v2 with JsonWebSignature2020 proofs
 - Manage private and public keys, providing via DID Documents public keys in JsonWebKey2020 format
 
 Additionally the simple wallet contains an extension for creating JSON-LD @contexts using Tractus-X SAMM Models Schemas. This allows the verifiable credentials with the semantic models to be valid JSON-LDs documents and enables the context of the existing and future modeled documents.
@@ -37,7 +37,7 @@ Using this "basic" wallet for issuing and verifying the "Aspect Model" credentia
 
 For the proof of concept two simple wallets were used at provider and consumer side. The simple wallet in the provider was used to issue the verifiable credential and then returned the signed credential, so it could be stored at a data service/submodel service. Also this credential was referenced then by the provider in the Digital Twin Registry deployed at their infrastructure.
 
-Using the Catena-X Standards for the [Digital Product Passport (CX-0143)](https://catenax-ev.github.io/docs/standards/CX-0143-UseCaseCircularEconomyDigitalProductPassportStandard/introduction) the data consumer was able to find the digital twin and retrieve the submodel which was indicated to be verifiable, like specified [here](../software-development-view/integration-implementation.md) in this Data Trust & Security KIT.
+Using the Catena-X Standards for the [Digital Product Passport (CX-0143)](https://catenax-ev.github.io/docs/standards/CX-0143-UseCaseCircularEconomyDigitalProductPassportStandard/introduction) the data consumer was able to find the digital twin and retrieve the submodel which was indicated to be verifiable, like specified [here](../software-development-view/digital-twins.md) in this Data Trust & Security KIT.
 
 After the consumer received the verifiable credential it used his simple wallet to verify the signature contained in the credential, and also validating the content (in case it was changed in transit).
 
