Update identity hub open meeting description

--- a/community/open-meetings.mdx
+++ b/community/open-meetings.mdx
@@ -78,7 +78,7 @@ All the times are shown in:
 
 <MeetingInfo title="Identity Hub Weekly"
              schedule="Every Wednesday from 03:00 pm to 04:00 pm"
-             description="Open Meeting to align the development of the Identity Hub (Wallet) and the Issuer Service."
+             description="Open Meeting to align the development of the TX Identity Hub"
              contact="mathias.moser@catena-x.net"
              sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_NTIxMmIyMmItYTk0NC00YjMxLWFiNDAtOTRlOWM1ZDUxYWRm%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%2279a55f91-092d-4603-8fa9-c88b54ff2fe9%22%7d"
              additionalLinks={
