feat: Add operation view documentation and governance body requirements; update page routes for data trust and security kit

--- a/docs-kits/kits/data-trust-and-security-kit/success-stories/dpp-verification-success-story.mdx
+++ b/docs-kits/kits/data-trust-and-security-kit/success-stories/dpp-verification-success-story.mdx
@@ -17,7 +17,7 @@ The Digital Product Passport Verification add-on is basically a concept for Cert
 
 The focus is on proving a process, artifacts and technologies, based on the existing SSI concept, aiming to enable Certification/Verification processes in Tractus-X using wallets.
 
-The documentation from the Digital Product Pass Verification Add-on is available [here](https://github.com/eclipse-tractusx/digital-product-pass/tree/main/dpp-verification). The concept enables the verification of the Data in the Reference Implementation using a [simple wallet](https://github.com/eclipse-tractusx/digital-product-pass/tree/main/dpp-verification/simple-wallet), a functional wallet that can:
+As described in the documentation from the [Digital Product Pass Verification Add-on](https://github.com/eclipse-tractusx/digital-product-pass/tree/main/dpp-verification). The concept enables the verification of the Data in the Reference Implementation using a [simple wallet](https://github.com/eclipse-tractusx/digital-product-pass/tree/main/dpp-verification/simple-wallet), a functional wallet that can:
 
 - Sign verifiable credentials v2 with JsonWebSignature2020 proofs
 - Verify verifiable credentials v2 with JsonWebSignature2020 proofs
