--- a/docs-kits/kits/traceability-kit/architecture-view.mdx
+++ b/docs-kits/kits/traceability-kit/architecture-view.mdx
@@ -131,7 +131,7 @@ Catena-X is to be used to transfer this information in a standardized manner and
 
 The interaction of block notifications is based on events that can be triggered by both the sender and the recipient. These events are represented by a status model and are used to track the progress of the parts that need to be blocked or respectively sorted out by the customer. Details about these status model and the Open API specification for Block Notifications are available in the [Developer View](software-development-view/data-provider.mdx).
 
-> :raised_hand: Note that (from the current 25.09 release on) the Block Notification has always to be referred to the initial problem/defect via a problem ID. The initial problem/defect, ist the problem, the Block Notification, as delemitation, was requested for. The infomation has to be provided via the data field "problemID" in the relevant notification. In this way, the Block Notification for a part can always be assigned to the correct defect, in the event of multiple defects for one particular part. This assignment is particularly also important in the event of an update.
+> :raised_hand: Note that (from the current 25.09 release on) the Block Notification has always to be referred to the initial problem/defect via a problem ID. The initial problem/defect is the problem the Block Notification, as delemitation, was requested for. The infomation has to be provided via the data field "problemID" in the relevant notification. In this way, the Block Notification for a part can always be assigned to the correct defect, in the event of multiple defects for one particular part. This assignment is particularly also important in the event of an update.
 
 **Scenario 1:** In this case, it is assumed that the sender sends a list of parts with the associated block information to the recipient. The block status of each part is set to ACTIVE by default.
 
