--- a/docs-kits/kits/traceability-kit/changelog.mdx
+++ b/docs-kits/kits/traceability-kit/changelog.mdx
@@ -14,7 +14,7 @@ All notable changes to this KIT will be documented in this file.
 Compatible for **release 25.09**.
 ### Changed
  - **Architecture View:**
-  - Adapted process for sending, recieving and updating Block Notifications including Problem ID to refernce the Block Notification to the inital problem, the Block Notification was requested for
+  - Adapted process for sending, receiving and updating Block Notifications including Problem ID to refernce the Block Notification to the inital problem, the Block Notification was requested for
 - **Development View:**
   - **App Provider:**
     - New version (v2.0.0) for Block Notification was developed including the field ProblemID
