--- a/docs-kits/kits/traceability-kit/changelog.mdx
+++ b/docs-kits/kits/traceability-kit/changelog.mdx
@@ -12,9 +12,18 @@ All notable changes to this KIT will be documented in this file.
 ## [7.0.0] - 2025-08-07
 
 Compatible for **release 25.09**.
-### Changed
+
+### Added
+ - **Adoption View:**
+   - Introduced the new Digital Twin "qualityTask"  
+
  - **Architecture View:**
+   - Added the new Digital Twin "qualityTask"  
+
+### Changed
+- **Architecture View:**
   - Adapted process for sending, receiving and updating Block Notifications including Problem ID to refernce the Block Notification to the inital problem, the Block Notification was requested for
+
 - **Development View:**
   - **App Provider:**
     - New version (v2.0.0) for Block Notification was developed including the field ProblemID
