make sure the files are display in right order

--- a/docs/release/trg-4/trg-4-01.md
+++ b/docs/release/trg-4/trg-4-01.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 4.01 - Image tagging
+sidebar_position: 1
 ---
 
 | Status | Created     | Post-History                                       |
@@ -104,7 +105,7 @@ jobs:
         with:
           images: |
             ${{ env.IMAGE_NAMESPACE }}/${{ env.IMAGE_NAME }}
-          # Automatically prepare image tags; See action docs for more examples. 
+          # Automatically prepare image tags; See action docs for more examples.
           # semver patter will generate tags like these for example :1 :1.2 :1.2.3
           tags: |
             type=ref,event=branch
@@ -133,13 +134,13 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
       # https://github.com/peter-evans/dockerhub-description
-      # Important step to push image description to DockerHub 
+      # Important step to push image description to DockerHub
       - name: Update Docker Hub description
         if: github.event_name != 'pull_request'
         uses: peter-evans/dockerhub-description@v3
         with:
-          # readme-filepath defaults to toplevel README.md, Only necessary if you have a dedicated file with your 'Notice for docker images'   
-          # readme-filepath: path/to/dedicated/notice-for-docker-image.md 
+          # readme-filepath defaults to toplevel README.md, Only necessary if you have a dedicated file with your 'Notice for docker images'
+          # readme-filepath: path/to/dedicated/notice-for-docker-image.md
           username: ${{ secrets.DOCKER_HUB_USER }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
           repository: ${{ env.IMAGE_NAMESPACE }}/${{ env.IMAGE_NAME }}
