--- a/docs/release/trg-7/trg-7-00.md
+++ b/docs/release/trg-7/trg-7-00.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 7.00 - Recurring activities for each PR
+sidebar_position: 1
 ---
 
 | Status | Created     | Post-History                         |
