--- a/docs/release/trg-7/trg-7-01.md
+++ b/docs/release/trg-7/trg-7-01.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 7.01 - Legal Documentation
+sidebar_position: 2
 ---
 
 | Status | Created     | Post-History                                    |
