--- a/docs/release/trg-7/trg-7-02.md
+++ b/docs/release/trg-7/trg-7-02.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 7.02 - License and Copyright header
+sidebar_position: 3
 ---
 
 | Status | Created     | Post-History                                       |
