--- a/docs/release/trg-7/trg-7-03.md
+++ b/docs/release/trg-7/trg-7-03.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 7.03 - IP checks for project content
+sidebar_position: 4
 ---
 
 | Status | Created     | Post-History                  |
