--- a/docs/release/trg-7/trg-7-06.md
+++ b/docs/release/trg-7/trg-7-06.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 7.06 - Legal notice for end user content
+sidebar_position: 7
 ---
 
 | Status | Created     | Post-History                               |
