--- a/docs/release/trg-7/trg-7-07.md
+++ b/docs/release/trg-7/trg-7-07.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 7.07 - Legal notice for non-code (e.g. KITS, documentation, images, slidesets, issue content)
+sidebar_position: 8
 ---
 
 | Status | Created     | Post-History                  |
