--- a/docs/release/trg-7/trg-7-08.md
+++ b/docs/release/trg-7/trg-7-08.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 7.08 - Legal notice for KIT documentation (CC-BY-4.0)
+sidebar_position: 9
 ---
 
 | Status | Created     | Post-History                          |
