--- a/docs/release/trg-7/trg-7-09.md
+++ b/docs/release/trg-7/trg-7-09.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 7.09 - Deprecation of Unmaintained Repositories
+sidebar_position: 10
 ---
 
 | Status  | Created     | Post-History                          |
@@ -106,7 +107,7 @@ In case a repository you are maintaining or want to maintain got deprecated afte
 ```mermaid
 flowchart TD
     A[1: Requestor creates an issue in the sig-infra repository following a template] --> B[2: Requestors send an email to the tractusx-dev mailing list informing of responsible committer, issue id and reason for reactivation]
-    B --> C[3: Requestor informs the community in the office hour] 
+    B --> C[3: Requestor informs the community in the office hour]
     C --> D{Reactivation Criteria Fulfilled?}
     D --> |NO| E[4: Project Lead closes the issue in Github]
     D --> |YES| F[4: Project Lead opens issue in .eclipsefdn]
@@ -126,7 +127,7 @@ flowchart TD
 ### Issue Template for Reactivation
 
 ```markdown
-Title: Request for repository [<REPOSITORY_NAME>] reactivation 
+Title: Request for repository [<REPOSITORY_NAME>] reactivation
 Content:
 ## Context
 
