--- a/docs/release/trg-4/trg-4-02.md
+++ b/docs/release/trg-4/trg-4-02.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 4.02 - Base Images
+sidebar_position: 2
 ---
 
 | Status | Created     | Post-History                                                                    |
@@ -121,7 +122,7 @@ base image for your application that contains all dependent tools.
 :::warning Do not update or install additional packages
 
 ```Dockerfile
-# Call for feedback: Does this example make sense at all or 
+# Call for feedback: Does this example make sense at all or
 # should it be removed?
 FROM alpine:3.18.2
 
