--- a/docs/release/trg-4/trg-4-05.md
+++ b/docs/release/trg-4/trg-4-05.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 4.05 - Container registries
+sidebar_position: 5
 ---
 
 | Status | Created      | Post-History                                                            |
