--- a/docs/release/trg-4/trg-4-08.md
+++ b/docs/release/trg-4/trg-4-08.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 4.08 - Multi-platform images
+sidebar_position: 8
 ---
 
 | Status | Created     | Post-History                              |
