--- a/docs/release/trg-5/trg-5-02.md
+++ b/docs/release/trg-5/trg-5-02.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 5.02 - Chart structure
+sidebar_position: 2
 ---
 
 | Status | Created     | Post-History                                           |
@@ -68,7 +69,7 @@ chartName/
   values.yaml          # mandatory
   crds/                # optional
   templates/           # mandatory, except of umbrella Helm charts
-  templates/NOTES.txt  # optional 
+  templates/NOTES.txt  # optional
 ```
 
 For further details on Helm chart basics, please refer to [Helm documentation](https://helm.sh/docs/topics/charts/).
@@ -115,14 +116,14 @@ The README.md file **must** contain:
   - Helm 3.2.0+
   - PV provisioner support in the underlying infrastructure
   ```
-  
+
 - a section of "TL;DR" that includes the helm commands to add and install the helm chart, Example:
 
   ```shell
   helm repo add my-repo https://charts.bitnami.com/bitnami
   helm install my-release my-repo/postgresql
   ```
-  
+
 - documentation of default values for this Helm chart ([_helm-docs_](https://github.com/norwoodj/helm-docs#helm-docs)
   may help).
 
