--- a/docs/release/trg-5/trg-5-04.md
+++ b/docs/release/trg-5/trg-5-04.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 5.04 - Resource Management
+sidebar_position: 4
 ---
 
 | Status | Created     | Post-History                                 |
