--- a/docs/release/trg-5/trg-5-09.md
+++ b/docs/release/trg-5/trg-5-09.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 5.09 - Helm test
+sidebar_position: 9
 ---
 
 | Status     | Created     | Post-History                                    |
