--- a/docs/release/trg-7/trg-7-05.md
+++ b/docs/release/trg-7/trg-7-05.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 7.05 - Legal information for distributions
+sidebar_position: 6
 ---
 
 | Status | Created     | Post-History                  |
