--- a/docs/release/trg-8/trg-8-03.md
+++ b/docs/release/trg-8/trg-8-03.md
@@ -1,5 +1,6 @@
 ---
 title: TRG 8.03 - TruffleHog
+sidebar_position: 3
 ---
 
 | Status | Created     | Post-History                                                  |
@@ -92,5 +93,5 @@ jobs:
 
       - name: Scan Results Status
         if: steps.trufflehog.outcome == 'failure'
-        run: exit 1  # Set workflow run to failure if TruffleHog finds secrets 
+        run: exit 1  # Set workflow run to failure if TruffleHog finds secrets
 ```
